<resources>
    <string name="app_name">FetLife</string>

    <string name="google_app_id">latex-fetish-123456</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_message">Your message here</string>
    <string name="action_log_on">Log me in, scotty!</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_conversations">FetLife</string>
    <string name="title_activity_messages">FetLife</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="snakckbar_loading">Refreshing...</string>
    <string name="logon_title">Log in to FetLife</string>
    <string name="sign_up">Sign up Now!</string>
    <string name="forgot_login">Forgot your login info?</string>

    <string name="menu_converations">Conversations</string>
    <string name="message_sub_separator">" \@ "</string>
    <string name="progress_logging_in">Beaming you up...</string>
    <string name="error_connection_failed">Server could not be reached. Please check your internet connection</string>
    <string name="error_apicall_failed">Connection failed. Please try again later</string>
    <string name="authentication_failed">Please login again</string>

    <string name="new_message_indication">NEW</string>
    <string name="version_prefix">"App version: "</string>
    <string name="error_saved_message">Log saved into file fetlife.log, Please send us the log file via our github project.</string>
    <string name="title_activity_friends">Friends</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_friends_new_conversation">New Conversation</string>
    <string name="menu_about">About</string>
    <string name="text_about">Official FetLife App v</string>
    <string name="text_unknown">unknown</string>
    <string name="button_new_conversation_discription">New Conversation</string>
    <string name="button_send_description">Send Message</string>
    <string name="input_message_description">Your Message</string>
    <string name="menu_friendrequests">Friend Requests</string>
    <string name="title_activity_friendrequests">Friend Requests</string>
    <string name="action_undo">UNDO</string>
    <string name="text_friendrequests_rejected">Rejected</string>
    <string name="text_friendrequests_accepted">Accepted</string>
    <string name="text_friendrequests_toaccept">Accept</string>
    <string name="text_friendrequests_toreject">Reject</string>
    <string name="friendrequest_activity_hint">Swipe right to accept; left to reject</string>
    <string name="undo_no_longer_possible">Undo is no longer possible</string>
    <string name="menu_introduce">Share My Profile</string>
    <string name="message_nfc_not_available">This feature requires NFC communication.</string>
    <string name="message_android_version_not_sufficient">This feature requires a higher Android version</string>
    <string name="header_friendrequest">Friend Requests</string>
    <string name="header_friendsuggestion">Shared Profiles</string>
    <string name="nfc_tap_your_device">Tap your device to another Android device to activate the beam</string>
    <string name="message_nfc_turned_off">Please turn on NFC to enble this feature</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
