<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/navigation" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_conversations"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_converations" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_friends" />

        <item
            android:id="@+id/nav_friendrequests"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_friendrequests" />
    </group>

    <group android:id="@+id/logout" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/menu_logout" />
    </group>

    <group android:id="@+id/about" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>

</menu>
